Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 6.2.3
-
Fix Version/s: 6.3.0 Beta1, 6.4.0 Beta1
-
Component/s: Build tools: qdoc
-
Labels:None
-
Story Points:8
-
Commits:8ccf60bfc2 (qt/qttools/dev) ae61ca60b5 (qt/qttools/6.3) ae61ca60b5 (qt/tqtc-qttools/6.3) 8ccf60bfc2 (qt/tqtc-qttools/dev) 12ae8738de (qt/qttools/6.2) 12ae8738de (qt/tqtc-qttools/6.2) 12ae8738de (qt/qttools/6.2.4)
-
Sprint:Da Vinci sprint 48
Description
In certain conditions QDoc asserts when generating the automated note
'Reimplements an access function for property: ...'
in a function documentation. This happens when DocBook is set as an output format.