qdoc: DocBook generator: Fix reimplements clause generation

Fixes ASSERT: "actualNode" in file
qttools/src/qdoc/docbookgenerator.cpp, line 4246

There was an apparent copy-paste error in
DocBookGenerator::generateReimplementsClause(), causing an
assert in DocBookGenerator::generateFullName().

Fixes: QTBUG-100316
Change-Id: I7ca6ba53fbf814a65e6f37ff91ee2aea7fa01643
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 8ccf60bfc25504c89ac632f1ddefecabf741fdee)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>